frontend design implemented

--- a/backend/expensetracker/src/main/resources/application.properties
+++ b/backend/expensetracker/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=expensetracker
 spring.data.mongodb.uri=mongodb://localhost:27017/expensedb
 server.port=8080
+server.address=0.0.0.0
+
+# Enable request logging
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+# Configure server timeouts
+server.tomcat.connection-timeout=20000
+server.tomcat.max-threads=200
+
+# MongoDB connection pool settings
+spring.data.mongodb.connection-pool-size=8
+spring.data.mongodb.socket-timeout=2000
+spring.data.mongodb.connection-timeout=2000
 
